--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@ De cette manière nous pouvons laisser des messages pour d'autres codeurs et des
 
     <p>Cette fable montre que le plus grand service qu’on puisse attendre de la reconnaissance des méchants, c’est qu’à l’ingratitude ils n’ajoutent pas l’injustice. </p>
   <div class="illustration">
-    
+    <img src="images/lecorbeauetlerenard.jpg" alt="Renard etc">
+
 
     </div>
 
@@ -54,7 +55,7 @@ De cette manière nous pouvons laisser des messages pour d'autres codeurs et des
     <p>Cette fable montre que souvent le travail l’emporte sur les dons naturels, si on les néglige.</p>
   </div>
   <div class="illustration">
-
+    
     </div>
   </div>
 </section>
@@ -68,6 +69,7 @@ De cette manière nous pouvons laisser des messages pour d'autres codeurs et des
 
   </div>
   <div class="illustration">
+    <img src="images/lecorbeauetlerenard.jpg" alt="Renard etc">
 
 
     </div>
@@ -83,6 +85,7 @@ De cette manière nous pouvons laisser des messages pour d'autres codeurs et des
     <p>Cette fable montre qu’auprès des gens décidés à faire le mal la plus juste défense reste sans effet. </p>
   </div>
   <div class="illustration">
+    <img src="images/leloupetlagneau.jpg" alt="Renard etc">
 
     </div>
   </div>
@@ -96,6 +99,7 @@ De cette manière nous pouvons laisser des messages pour d'autres codeurs et des
  <p>Cette fable montre que dans le malheur on n’a même pas les plaisirs du ventre. </p>
   </div>
     <div class="illustration">
+      <img src="images/leloupetlechien.jpg" alt="Renard etc">
 
     </div>
   </div>
