--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ De cette manière nous pouvons laisser des messages pour d'autres codeurs et des
 
     <p>Cette fable montre que le plus grand service qu’on puisse attendre de la reconnaissance des méchants, c’est qu’à l’ingratitude ils n’ajoutent pas l’injustice. </p>
   <div class="illustration">
-    <img src="images/lecorbeauetlerenard.jpg" alt="Renard etc">
+    <img src="images/leloupetleheron.gif" alt="leloupetleheron etc">
 
 
     </div>
@@ -55,7 +55,8 @@ De cette manière nous pouvons laisser des messages pour d'autres codeurs et des
     <p>Cette fable montre que souvent le travail l’emporte sur les dons naturels, si on les néglige.</p>
   </div>
   <div class="illustration">
-    
+    <img src="images/lelievreetlatortue.jpg" alt="Renard etc">
+
     </div>
   </div>
 </section>
